only html file changed for libera chat, po files excluded

--- a/alt.fedoraproject.org/data/content/prerelease/index.html
+++ b/alt.fedoraproject.org/data/content/prerelease/index.html
@@ -991,7 +991,7 @@
         <div class="col-md-4 col-xs-12">
         <div class="col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-comments"></i>${_('Chat')}</h3>
-          <p>${Markup(_('Discussion of Fedora testing takes place in the &lt;a href="%s"&gt;#fedora-qa&lt;/a&gt; IRC channel on &lt;strong&gt;irc.freenode.org.&lt;/strong&gt;') % ('http://webchat.freenode.net/?channels=fedora-qa'))}</p>
+          <p>${Markup(_('Discussion of Fedora testing takes place in the &lt;a href="%s"&gt;#fedora-qa&lt;/a&gt; IRC channel on &lt;strong&gt;irc.libera.chat.&lt;/strong&gt;') % ('https://web.libera.chat/?channels=#fedora-qa'))}</p>
         </div>
         </div>
       </div>
