--- a/fedoracommunity.org/data/content/latam.html
+++ b/fedoracommunity.org/data/content/latam.html
@@ -37,7 +37,7 @@ index=math.ceil(len(contries)/float(2))
 							</tr><tr>
 
 								<th>${_('Chat')}</th>
-								<td><a href="#">#fedora-latam</a> ${Markup(_('on &lt;a href="%s"&gt;irc.freenode.net&lt;/a&gt;' % '#'))}</td>
+								<td><a href="#">#fedora-latam</a> ${Markup(_('on &lt;a href="%s"&gt;irc.libera.chat&lt;/a&gt;' % '#'))}</td>
 							</tr><tr>
 								<th>${_('Events')}</th>
 								<td>${Markup(_('&lt;a href="%s"&gt;LATAM events listing&lt;/a&gt; on the Fedora Project wiki.' % '#'))}</td>
