--- a/fedoraproject.org/data/content/sponsors.html
+++ b/fedoraproject.org/data/content/sponsors.html
@@ -73,7 +73,7 @@
    </div>
 <div class="grid_16">
 		<h4>${_('Interested in sponsoring something for Fedora?')}</h4>
-                <p>${_('Interested in sponsoring something for Fedora? Contact ')} <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#97;&#100;&#109;&#105;&#110;&#64;&#102;&#101;&#100;&#111;&#114;&#97;&#112;&#114;&#111;&#106;&#101;&#99;&#116;&#46;&#111;&#114;&#103;">&#97;&#100;&#109;&#105;&#110;&#64;&#102;&#101;&#100;&#111;&#114;&#97;&#112;&#114;&#111;&#106;&#101;&#99;&#116;&#46;&#111;&#114;&#103;</a> ${Markup(_('or stop by &lt;strong&gt;#fedora-admin&lt;/strong&gt; on &lt;strong&gt;irc.freenode.net&lt;/strong&gt;.'))}</p>
+                <p>${_('Interested in sponsoring something for Fedora? Contact ')} <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#97;&#100;&#109;&#105;&#110;&#64;&#102;&#101;&#100;&#111;&#114;&#97;&#112;&#114;&#111;&#106;&#101;&#99;&#116;&#46;&#111;&#114;&#103;">&#97;&#100;&#109;&#105;&#110;&#64;&#102;&#101;&#100;&#111;&#114;&#97;&#112;&#114;&#111;&#106;&#101;&#99;&#116;&#46;&#111;&#114;&#103;</a> ${Markup(_('or stop by &lt;strong&gt;#fedora-admin&lt;/strong&gt; on &lt;strong&gt;irc.libera.chat&lt;/strong&gt;.'))}</p>
 
 			<p id="section-nav-bottom"><a href="/">&lt; ${_('Return to the main Fedora website.')}</a></p>
             </div>
