--- a/fedoraproject.org/data/content/using/life/chrisbredesen.html
+++ b/fedoraproject.org/data/content/using/life/chrisbredesen.html
@@ -34,7 +34,7 @@
 		<p>${Markup(_('Principal Software Engineer at &lt;a href=\"http://redhat.com\"&gt;Red Hat&lt;/a&gt;.'))}</p>
 
 		<h4>${_('What\'s your IRC nick?')}</h4>
-		<p>${_('When I\'m on Freenode/Codehaus, etc, I use \'cbredesen\' so as to be  transparent about my identity.  Here at Red Hat, I go by \'breddy\' which  is a casual shortening of my last name given to me by a college buddy. I decided to keep it as a nick because it is vaguely similar to the first name of one of my Norwegian ancestors, Brede, (from whom my last name is derived).')}</p>
+		<p>${_('When I\'m on Libera.​Chat/Codehaus, etc, I use \'cbredesen\' so as to be  transparent about my identity.  Here at Red Hat, I go by \'breddy\' which  is a casual shortening of my last name given to me by a college buddy. I decided to keep it as a nick because it is vaguely similar to the first name of one of my Norwegian ancestors, Brede, (from whom my last name is derived).')}</p>
 
 		<h4>${_('How did you first become a Java developer?')}</h4>
 		<p>${_('My degree is in Computer Science but I\'d not been interested in a career in software development for whatever reason so I went down the sysadmin path.  I had been doing server administration for many years, building mainly departmental and corporate Windows networks.  I decided to get back into programming around 2001 and, due to circumstances, moved into a role doing Visual Basic development.  Not long after I joined, we changed platforms from VB/C++/Windows to Java/*NIX/Linux.  The rest is history.')}</p>
