--- a/alt.fedoraproject.org/data/content/alt/index.html
+++ b/alt.fedoraproject.org/data/content/alt/index.html
@@ -431,7 +431,7 @@
         <div class="col-md-4 col-xs-12">
         <div class="col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-comments"></i>${_('Chat')}</h3>
-          <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#fedora-arm&lt;/a&gt; IRC channel on &lt;strong&gt;irc.freenode.org&lt;/strong&gt; for real-time chat.') % ('http://webchat.freenode.net/?channels=fedora-arm'))}</p>
+          <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#fedora-arm&lt;/a&gt; IRC channel on &lt;strong&gt;irc.libera.chat&lt;/strong&gt; for real-time chat.') % ('https://web.libera.chat/?channels=#fedora-arm'))}</p>
         </div>
         </div>
       </div>
@@ -759,7 +759,7 @@
         <div class="col-md-4 col-xs-12">
         <div class="col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-comments"></i>${_('Chat')}</h3>
-          <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#fedora-ppc&lt;/a&gt; IRC channel on &lt;strong&gt;irc.freenode.org&lt;/strong&gt; for real-time chat.') % ('http://webchat.freenode.net/?channels=fedora-ppc'))}</p>
+          <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#fedora-ppc&lt;/a&gt; IRC channel on &lt;strong&gt;irc.libera.chat&lt;/strong&gt; for real-time chat.') % ('https://web.libera.chat/?channels=#fedora-ppc'))}</p>
         </div>
         </div>
       </div>
@@ -1051,7 +1051,7 @@
         <div class="col-md-4 col-xs-12">
         <div class="col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-comments"></i>${_('Chat')}</h3>
-          <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#fedora-s390x&lt;/a&gt; IRC channel on &lt;strong&gt;irc.freenode.org&lt;/strong&gt; for real-time chat.') % ('http://webchat.freenode.net/?channels=fedora-s390x'))}</p>
+          <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#fedora-s390x&lt;/a&gt; IRC channel on &lt;strong&gt;irc.libera.chat&lt;/strong&gt; for real-time chat.') % ('https://web.libera.chat/?channels=#fedora-s390x'))}</p>
         </div>
         </div>
       </div>
