--- a/alt.fedoraproject.org/data/content/cloud/index.html
+++ b/alt.fedoraproject.org/data/content/cloud/index.html
@@ -583,7 +583,7 @@
         <div class="col-md-4 col-xs-12">
         <div class="col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-comments"></i>${_('Chat')}</h3>
-          <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#fedora-cloud&lt;/a&gt; IRC channel on &lt;strong&gt;irc.freenode.org&lt;/strong&gt; for real-time chat.') % ('http://webchat.freenode.net/?channels=fedora-cloud'))}</p>
+          <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#fedora-cloud&lt;/a&gt; IRC channel on &lt;strong&gt;irc.libera.chat&lt;/strong&gt; for real-time chat.') % ('https://web.libera.chat/?channels=#fedora-cloud'))}</p>
         </div>
         </div>
       </div>
