--- a/arm.fedoraproject.org/data/content/index.html
+++ b/arm.fedoraproject.org/data/content/index.html
@@ -594,7 +594,7 @@
           </div>
           <div class="col-md-4 col-xs-12 text-center">
             <h3><i class="fa fa-fw fa-lg header-icon fa-comments"></i>${_('Chat')}</h3>
-            <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#fedora-arm&lt;/a&gt; irc channel on &lt;strong&gt;irc.freenode.org&lt;/strong&gt; for real-time chat.') % ('http://webchat.freenode.net/?channels=fedora-arm'))}</p>
+            <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#fedora-arm&lt;/a&gt; irc channel on &lt;strong&gt;irc.libera.chat&lt;/strong&gt; for real-time chat.') % ('https://web.libera.chat/?channels=#fedora-arm'))}</p>
           </div>
         </div>
         <div class="row top-margin">
