--- a/labs.fedoraproject.org/data/content/astronomy/download/index.html
+++ b/labs.fedoraproject.org/data/content/astronomy/download/index.html
@@ -142,7 +142,7 @@
       <div class="row top-margin">
         <div class="col-md-4 col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-comments"></i>${_('Chat')}</h3>
-          <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#fedora-astronomy&lt;/a&gt; IRC channel on &lt;strong&gt;irc.freenode.org&lt;/strong&gt; for real-time chat.') % ('http://webchat.freenode.net/?channels=fedora-astronomy'))}</p>
+          <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#fedora-astronomy&lt;/a&gt; IRC channel on &lt;strong&gt;irc.libera.chat&lt;/strong&gt; for real-time chat.') % ('https://web.libera.chat/?channels=#fedora-astronomy'))}</p>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-envelope-o"></i>${_('Email')}</h3>
