--- a/spins.fedoraproject.org/data/content/lxde/index.html
+++ b/spins.fedoraproject.org/data/content/lxde/index.html
@@ -151,7 +151,7 @@
       <div class="row top-margin">
         <div class="col-md-4 col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-comments"></i>${_('Chat')}</h3>
-          <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#lxde&lt;/a&gt; IRC channel on &lt;strong&gt;irc.freenode.org&lt;/strong&gt; for real-time chat.') % ('http://webchat.freenode.net/?channels=lxde'))}</p>
+          <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#lxde&lt;/a&gt; IRC channel on &lt;strong&gt;irc.libera.chat&lt;/strong&gt; for real-time chat.') % ('https://web.libera.chat/?channels=#lxde'))}</p>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-envelope-o"></i>${_('Email')}</h3>
