Shorten Nest due to a time limit on Hopin

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -65,7 +65,7 @@
           
 
           <h2>Event Dates</h2>
-          <p>Nest will begin the morning of Thursday, August 5. Sessions will continue each day until Sunday, August 8. <!--You should plan to arrive by Wednesday, August 5 and to depart no sooner than Sunday afternoon for the best experience.--></p>
+          <p>Nest will begin the morning of Thursday, August 5. Sessions will continue each day until Saturday, August 7. <!--You should plan to arrive by Wednesday, August 5 and to depart no sooner than Sunday afternoon for the best experience.--></p>
 
           <table class="calendar">
               <tr>
@@ -81,7 +81,8 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td class="flock" colspan="4">Nest</td>
+                <td class="flock" colspan="3">Nest</td>
+                <td></td>
               </tr>
               <tr>
                 <td>Aug <span>2</span></td>
@@ -90,7 +91,7 @@
                 <td class="flock">Aug <span>5</span></td>
                 <td class="flock">Aug <span>6</span></td>
                 <td class="flock">Aug <span>7</span></td>
-                <td class="flock">Aug <span>8</span></td>
+                <td>Aug <span>8</span></td>
               </tr>
             </table>
 
