Add new Nest sponsors

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -336,25 +336,25 @@
           </p>
           <br/>
           <h3>Gold Level</h3>
-<!--          <p>
-            <a href="https://www.opensuse.org/"><img src="../../static/images/opensuse.png"/></a>
-          </p>
            <p>
-            <a href="https://aws.amazon.com/"><img src="../../static/images/sponsors/aws.png"/></a>
+            <a href="https://almalinux.org/"><img src="../../static/images/sponsors/alma_linux.png"/></a>
           </p>
-           <p>
+<!--           <p>
             <a href="https://www.lenovo.com/"><img src="../../static/images/sponsors/lenovo.png"/></a>
           </p>-->
           <h3>Bronze Level</h3>
-<!--          <p>
+            <p>
+            <a href="https://www.opensuse.org/"><img src="../../static/images/opensuse.png"/></a>
+          </p>
+          <p>
             <a href="https://www.datto.com/"><img src="../../static/images/sponsors/Datto-blue-RGB.png"/></a>
           </p>
           <p>
-            <a href="https://www.apache.org/"><img src="../../static/images/sponsors/apache-software-foundation.png"/></a>
+            <a href="https://www.shells.com/"><img src="../../static/images/sponsors/shells.png"/></a>
           </p>
           <p>
-            <a href="https://www.spigotmc.org/"><img src="../../static/images/sponsors/spigot.png"/></a>
-          </p>-->
+            <a href="https://www.gitlab.com/"><img src="../../static/images/sponsors/gitlab.png"/></a>
+          </p>
         </div>
       </div>
       </div>
