Add nest 2021 banner

--- a/start.fedoraproject.org/data/content/index.html
+++ b/start.fedoraproject.org/data/content/index.html
@@ -1,28 +1,42 @@
 <!DOCTYPE html>
-<html lang="en"
+<html
+  lang="en"
   xmlns="http://www.w3.org/1999/xhtml"
   xmlns:py="http://genshi.edgewall.org/"
-  xmlns:xi="http://www.w3.org/2001/XInclude">
+  xmlns:xi="http://www.w3.org/2001/XInclude"
+>
   <xi:include href="../templates/master.html" />
-	<head>
-		<title>${_('Fedora Project - Start Page')}</title>
-	</head>
-	<body class="home">
-        <xi:include href="../templates/head.html" />
-        <xi:include href="../templates/docs-header.html" />
-        <div class="clear"></div>
-        <div class="container grey">
-            <div class="row grey feed-space">
-                <div class="col-xs-12 top-margin">
-                <h4>${_('Latest news from Fedora Magazine:')}</h4>
-                </div>
-                <div class="col-xs-12 col-md-11">
-                <xi:include href="../templates/magfeed.html" />
-                </div>
-            </div>
-            <div class="clear"></div>
-         </div>
-         <xi:include href="../templates/footer-resources.html" />
-	</body>
-
+  <head>
+    <title>${_('Fedora Project - Start Page')}</title>
+  </head>
+  <body class="home">
+    <xi:include href="../templates/head.html" />
+    <xi:include href="../templates/docs-header.html" />
+    <div class="clear"></div>
+    <div class="container grey">
+      <!-- Nest Banner -->
+      <div
+        class="col-xs-12 top margin"
+        style="padding: 10px 0; text-align: center"
+      >
+        <a href="https://hopin.com/events/nest-with-fedora-2021">
+          <img
+            src="../../static/images/nest-banner.jpg"
+            alt="Nest 2021 event signup banner"
+            style="max-width: 832px; width: 100%"
+          />
+        </a>
+      </div>
+      <div class="row grey feed-space">
+        <div class="col-xs-12 top-margin">
+          <h4>${_('Latest news from Fedora Magazine:')}</h4>
+        </div>
+        <div class="col-xs-12 col-md-11">
+          <xi:include href="../templates/magfeed.html" />
+        </div>
+      </div>
+      <div class="clear"></div>
+    </div>
+    <xi:include href="../templates/footer-resources.html" />
+  </body>
 </html>
