nest banner improved size and padding

--- a/start.fedoraproject.org/data/content/index.html
+++ b/start.fedoraproject.org/data/content/index.html
@@ -17,13 +17,13 @@
       <!-- Nest Banner -->
       <div
         class="col-xs-12 top margin"
-        style="padding: 10px 0; text-align: center"
+        style="padding: 2.4rem 0rem 1rem; text-align: center"
       >
         <a href="https://hopin.com/events/nest-with-fedora-2021">
           <img
             src="../../static/images/nest-banner.jpg"
             alt="Nest 2021 event signup banner"
-            style="max-width: 832px; width: 100%"
+            style="max-width: 1012px; width: 100%"
           />
         </a>
       </div>
