Add new Nest sponsors

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -334,14 +334,17 @@
           <p>
             <a href="https://www.redhat.com"><img src="../../static/images/sponsors/redhat.png"/></a>
           </p>
+          <p>
+            <a href="https://aws.amazon.com/"><img src="../../static/images/sponsors/AWS_logo_RGB.png"/></a>
+          </p>
           <br/>
           <h3>Gold Level</h3>
            <p>
             <a href="https://almalinux.org/"><img src="../../static/images/sponsors/alma_linux.png"/></a>
           </p>
-<!--           <p>
+           <p>
             <a href="https://www.lenovo.com/"><img src="../../static/images/sponsors/lenovo.png"/></a>
-          </p>-->
+          </p>
           <h3>Bronze Level</h3>
             <p>
             <a href="https://www.opensuse.org/"><img src="../../static/images/opensuse.png"/></a>
