--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -219,11 +219,11 @@
             <div class="col-xs-12 col-sm-6" id="irc">
               <h3>IRC</h3>
               <p>
-                Our main IRC channel for the event is <a href="https://webchat.freenode.net/?channels=#fedora-flock">#fedora-flock</a> on <strong>irc.freenode.net</strong>.
+                Our main IRC channel for the event is <a href="https://web.libera.chat/?channels=#fedora-flock">#fedora-flock</a> on <strong>libera.chat</strong>.
 <!-- Each session room also has a dedicated channel in IRC, and some sessions will be transcribed there. -->
               </p>
               <ul>
-                <li><a href="https://webchat.freenode.net/?channels=#fedora-flock">Join #fedora-flock now.</a></li>
+                <li><a href="https://web.libera.chat/?channels=#fedora-flock">Join #fedora-flock now.</a></li>
 <!-- fixme <li><a href="#">View full list of Flock channels.</a></li> -->
               </ul>
           </div>
