--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -59,8 +59,7 @@
           <h2>Schedule</h2>
           
           <p>
-            Coming in late July or early August.
-<!--            <strong>The <a href="https://hopin.to/events/nest-with-fedora#schedule">Nest schedule</a> is now available!</strong>-->
+            The <a href="https://fedoraproject.org/wiki/Nest_with_Fedora_2021_Schedule">schedule</a> is now available.  Changes are still possible.
           </p>
           
 
@@ -95,12 +94,7 @@
               </tr>
             </table>
 
-
-<!--
-            <p>The <a href="https://flock2018.sched.com/">schedule</a> is now available.  Changes are still possible.</p>
-            <h2>Tentative Schedule</h2>
-            <p>The <a href="https://flock2018.sched.com/">schedule</a> is now available.  Changes are still possible.</p>
-            <ul>
+<!--            <ul>
                 <li align="left"><p><b>Day 1, morning:</b> Kickoff. We'll start with a joint session about the state of Fedora in 2018, priorities for the next year, and messaging the Fedora Council would like emphasized. Then, we will have a series of 20-minute presentations from each of the Fedora Editions, as well as from the current Fedora Objectives — IoT, CI, and Modularity.</p></li>
                 <li align="left"><p><b>Day 1, afternoon:</b> New Ideas Talks. These sessions will be preselected presentations. Additionally, presenters should tell us who they need to be in the room to discuss / convince / get involved.</p></li>
                 <li align="left"><p><b>Day 2, morning:</b> We'll start with a keynote of general interest to the Fedora community, and then continue with break-out talks.</p></li>
@@ -108,8 +102,8 @@
                 <li align="left"><p><b>Day 3, all day:</b> Hackfests and Topic-Focused Discussion. SIG and Team meetings.  There may also be more break-out talks.</p></li>
                 <li align="left"><p><b>Day 4, morning:</b> Hackfests continue.</p></li>
                 <li align="left"><p><b>Day 4, afternoon:</b> Wrap Up / Readout session. Leadership panel followed by five-minute summaries from the various breakouts.</p></li>
-            </ul>
--->
+            </ul>-->
+
         </div>
       </div>
     </div>
@@ -144,15 +138,15 @@
             </ul>
 
             <h3>Submission deadline</h3>
-<!--             <p>The submission deadline has passed.</p> -->
-            <p>We will do a rolling deadline this year again with two acceptance dates.</p>
+             <p>The submission deadline has passed.</p> 
+<!--            <p>We will do a rolling deadline this year again with two acceptance dates.</p>
             <ul class="non-jumbo text-left">
                 <li>Friday 9 July 2021</li>
                 <li>Friday 16 July 2021</li>
-            </ul>
+            </ul>-->
 
-	      <p>Submit your ideas for Nest With Fedora in the <a href="https://pagure.io/flock/">Flock Pagure repository</a>.</p>
-<!--            <p>The CfP is now closed and the <a href="https://hopin.to/events/nest-with-fedora#schedule">schedule</a> is now available.</p>-->
+<!-- 	      <p>Submit your ideas for Nest With Fedora in the <a href="https://pagure.io/flock/">Flock Pagure repository</a>.</p> -->
+
  <!--
 
             <p>We invite you to submit proposals for talks (25/50 minutes) or workshops( 2 hours),  or hackfests/FADs (half or full day) on topics of importance to the contributor community.</p>
@@ -183,8 +177,8 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>Registration Information</h2>
-              <p>Coming soon!</p>
-<!--          <p><a href="https://hopin.to/events/nest-with-fedora">Register now</a> for Nest With Fedora. Nest will use the Hopin platform, generously provided by the Apache Software Foundation.</p>-->
+              <!--<p>Coming soon!</p>-->
+          <p><a href="https://hopin.com/events/nest-with-fedora-2021">Register now</a> for Nest With Fedora. Nest will use the Hopin platform.</p>
 
         </div>
       </div>
