Add It's FOSS as a sponsor

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -352,6 +352,10 @@
           <p>
             <a href="https://www.gitlab.com/"><img src="../../static/images/sponsors/gitlab.png"/></a>
           </p>
+          <h3>Media Sponsors</h3>
+           <p>
+            <a href="https://itsfoss.com/"><img src="../../static/images/sponsors/itsfoss.png"/></a>
+           </p>
         </div>
       </div>
       </div>
