Add DLN as a media sponsor

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -356,6 +356,9 @@
            <p>
             <a href="https://itsfoss.com/"><img src="../../static/images/sponsors/itsfoss.png"/></a>
            </p>
+           <p>
+            <a href="https://destinationlinux.network/"><img src="../../static/images/sponsors/dln.png"/></a>
+           </p>
         </div>
       </div>
       </div>
