nest banner removed

--- a/start.fedoraproject.org/data/content/index.html
+++ b/start.fedoraproject.org/data/content/index.html
@@ -14,19 +14,8 @@
     <xi:include href="../templates/docs-header.html" />
     <div class="clear"></div>
     <div class="container grey">
-      <!-- Nest Banner -->
-      <div
-        class="col-xs-12 top margin"
-        style="padding: 2.4rem 0rem 1rem; text-align: center"
-      >
-        <a href="https://hopin.com/events/nest-with-fedora-2021">
-          <img
-            src="../../static/images/nest-banner.jpg"
-            alt="Nest 2021 event signup banner"
-            style="max-width: 1012px; width: 100%"
-          />
-        </a>
-      </div>
+      <!-- Banner -->     
+      <!-- Banner -->
       <div class="row grey feed-space">
         <div class="col-xs-12 top-margin">
           <h4>${_('Latest news from Fedora Magazine:')}</h4>
