--- a/spins.fedoraproject.org/data/content/i3/download/index.html
+++ b/spins.fedoraproject.org/data/content/i3/download/index.html
@@ -151,7 +151,7 @@
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-envelope-o"></i>${_('Email')}</h3>
-          <p>${Markup(_('Users and developers are also available on the mailing list at &lt;a href="%s"&gt;i3wn@lists.fedoraproject.org&lt;/a&gt;.') % ('https://lists.fedoraproject.org/archives/list/i3wm@lists.fedoraproject.org/'))}</p>
+          <p>${Markup(_('Users and developers are also available on the mailing list at &lt;a href="%s"&gt;i3wm@lists.fedoraproject.org&lt;/a&gt;.') % ('https://lists.fedoraproject.org/archives/list/i3wm@lists.fedoraproject.org/'))}</p>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-book"></i>${_('Documentation')}</h3>
