use basepath where it's needed

--- a/alt.fedoraproject.org/data/content/cloud/index.html
+++ b/alt.fedoraproject.org/data/content/cloud/index.html
@@ -33,7 +33,7 @@
       <div class="row">
           <div class="white">
             <div class="col-lg-1">
-            <img src="/static/images/cloud.png" />
+            <img src="${path}/static/images/cloud.png" />
             </div>
             <div class="col-lg-5">
             <h3>${_('Cloud Base compressed raw image')}</h3>
@@ -47,7 +47,7 @@
           </div>
           <div class="white">
             <div class="col-lg-1">
-            <img src="/static/images/cloud.png" />
+            <img src="${path}/static/images/cloud.png" />
             </div>
             <div class="col-lg-5">
             <h3>${_('Cloud Base image for Openstack')}</h3>
@@ -79,7 +79,7 @@
       <div class="row">
         <div class="white">
           <div class="col-xs-3">
-          <img src="/static/images/cloud.png" />
+          <img src="${path}/static/images/cloud.png" />
           </div>
           <div class="col-xs-9">
           <h3>${_('Cloud Base raw')}</h3>
@@ -88,7 +88,7 @@
         </div>
         <div class="white">
           <div class="col-xs-3">
-          <img src="/static/images/cloud.png" />
+          <img src="${path}/static/images/cloud.png" />
           </div>
           <div class="col-xs-9">
           <h3>${_('Cloud Base qcow2')}</h3>
@@ -115,7 +115,7 @@
       <div class="row">
         <div class="white">
           <div class="col-sm-3">
-          <img src="/static/images/cloud.png" />
+          <img src="${path}/static/images/cloud.png" />
           </div>
           <div class="col-sm-5">
           <h3>${_('Cloud Base raw image')}</h3>
@@ -126,7 +126,7 @@
         </div>
         <div class="white">
           <div class="col-sm-3">
-          <img src="/static/images/cloud.png" />
+          <img src="${path}/static/images/cloud.png" />
           </div>
           <div class="col-sm-5">
           <h3>${_('Cloud Base qcow2 image')}</h3>
@@ -158,7 +158,7 @@
       <div class="row">
           <div class="white">
             <div class="col-lg-1">
-            <img src="/static/images/cloud.png" />
+            <img src="${path}/static/images/cloud.png" />
             </div>
             <div class="col-lg-5">
             <h3>${_('VirtualBox image')}</h3>
@@ -172,7 +172,7 @@
           </div>
           <div class="white">
             <div class="col-lg-1">
-            <img src="/static/images/cloud.png" />
+            <img src="${path}/static/images/cloud.png" />
             </div>
             <div class="col-lg-5">
             <h3>${_('libvirt/KVM image')}</h3>
@@ -204,7 +204,7 @@
       <div class="row">
         <div class="white">
           <div class="col-xs-3">
-          <img src="/static/images/cloud.png" />
+          <img src="${path}/static/images/cloud.png" />
           </div>
           <div class="col-xs-9">
           <h3>${_('VirtualBox image')}</h3>
@@ -213,7 +213,7 @@
         </div>
         <div class="white">
           <div class="col-xs-3">
-          <img src="/static/images/cloud.png" />
+          <img src="${path}/static/images/cloud.png" />
           </div>
           <div class="col-xs-9">
           <h3>${_('libvirt/KVM image')}</h3>
@@ -240,7 +240,7 @@
       <div class="row">
         <div class="white">
           <div class="col-sm-3">
-          <img src="/static/images/cloud.png" />
+          <img src="${path}/static/images/cloud.png" />
           </div>
           <div class="col-sm-5">
           <h3>${_('VirtualBox image')}</h3>
@@ -251,7 +251,7 @@
         </div>
         <div class="white">
           <div class="col-sm-3">
-          <img src="/static/images/cloud.png" />
+          <img src="${path}/static/images/cloud.png" />
           </div>
           <div class="col-sm-5">
           <h3>${_('libvirt/KVM image')}</h3>
@@ -286,7 +286,7 @@
       </div>
         <div class="white">
           <div class="col-lg-1">
-            <img src="/static/images/cloud.png" />
+            <img src="${path}/static/images/cloud.png" />
           </div>
           <div class="col-lg-5">
             <h3>${_('Compressed disk image')}</h3>
@@ -318,7 +318,7 @@
       </div>
         <div class="white">
           <div class="col-xs-3">
-            <img src="/static/images/cloud.png" />
+            <img src="${path}/static/images/cloud.png" />
           </div>
           <div class="col-xs-9">
             <h3>${_('Compressed disk image')}</h3>
@@ -346,7 +346,7 @@
       <div class="row">
         <div class="white">
           <div class="col-sm-3">
-            <img src="/static/images/cloud.png" />
+            <img src="${path}/static/images/cloud.png" />
           </div>
           <div class="col-sm-5">
             <h3>${_('Compressed disk image')}</h3>
@@ -379,7 +379,7 @@
       <div class="row">
           <div class="white">
             <div class="col-sm-1">
-            <img src="/static/images/cloud.png" />
+            <img src="${path}/static/images/cloud.png" />
             </div>
             <div class="col-sm-7">
             <h3>${_('x86_64 AMIs')}</h3>
@@ -416,7 +416,7 @@
           </div>
           <div class="white">
             <div class="col-sm-1">
-            <img src="/static/images/cloud.png" />
+            <img src="${path}/static/images/cloud.png" />
             </div>
             <div class="col-sm-7">
             <h3>${_('aarch64 AMIs')}</h3>
@@ -471,7 +471,7 @@
       <div class="row">
         <div class="white">
             <div class="col-xs-3">
-            <img src="/static/images/cloud.png" />
+            <img src="${path}/static/images/cloud.png" />
             </div>
             <div class="col-xs-9">
             <h3>${_('x86_64 AMIs')}</h3>
@@ -506,7 +506,7 @@
         </div>
         <div class="white">
             <div class="col-xs-3">
-            <img src="/static/images/cloud.png" />
+            <img src="${path}/static/images/cloud.png" />
             </div>
             <div class="col-xs-9">
             <h3>${_('aarch64 AMIs')}</h3>
