--- a/labs.fedoraproject.org/data/content/comp-neuro/index.html
+++ b/labs.fedoraproject.org/data/content/comp-neuro/index.html
@@ -29,7 +29,7 @@
     <div class="container using">
       <div class="row">
         <div class="col-xs-12 text-center spin-download">
-        <p><a class="btn btn-lg btn-primary" href="/comp-neuro/download/index.html" role="button">${_('Download Now')}</a></p>
+        <p><a class="btn btn-lg btn-primary" href="${path}/comp-neuro/download/index.html" role="button">${_('Download Now')}</a></p>
         </div>
       </div>
     </div>
@@ -150,7 +150,7 @@
     <div class="container using product-feature">
       <div class="row">
         <div class="col-xs-12 text-center spin-download">
-        <p><a class="btn btn-lg btn-primary" href="/comp-neuro/download/index.html" role="button">${_('Download Now')}</a></p>
+        <p><a class="btn btn-lg btn-primary" href="${path}/comp-neuro/download/index.html" role="button">${_('Download Now')}</a></p>
         </div>
       </div>
     </div>
