--- a/labs.fedoraproject.org/data/content/games/index.html
+++ b/labs.fedoraproject.org/data/content/games/index.html
@@ -29,7 +29,7 @@
     <div class="container using">
       <div class="row">
         <div class="col-xs-12 text-center spin-download">
-        <p><a class="btn btn-lg btn-primary" href="/games/download/index.html" role="button">${_('Download Now')}</a></p>
+        <p><a class="btn btn-lg btn-primary" href="${path}/games/download/index.html" role="button">${_('Download Now')}</a></p>
         </div>
       </div>
     </div>
@@ -126,7 +126,7 @@
     <div class="container using product-feature">
       <div class="row">
         <div class="col-xs-12 text-center spin-download">
-        <p><a class="btn btn-lg btn-primary" href="/games/download/index.html" role="button">${_('Download Now')}</a></p>
+        <p><a class="btn btn-lg btn-primary" href="${path}/games/download/index.html" role="button">${_('Download Now')}</a></p>
         </div>
       </div>
     </div>
