--- a/spins.fedoraproject.org/data/content/index.html
+++ b/spins.fedoraproject.org/data/content/index.html
@@ -55,12 +55,12 @@
        <div class="high kde">
     	  <div class="row">
     	  	<div class="col-xs-10 col-xs-offset-1 text-center top-space">
-    	  	  <a href="/${lang}/kde"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-kde.jpg" alt="KDE Screenshot" /></a>
+    	  	  <a href="${path}/${lang}/kde"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-kde.jpg" alt="KDE Screenshot" /></a>
     	  	</div>
     	  </div>
     	  <div class="row">
     	  	<div class="col-xs-10 col-xs-offset-1 text-center">
-    	  	  <p class="screenshot bottom-border"><a href="/${lang}/kde"><img class="spin-banner" src="${path}/static/images/kde-banner.png" alt="KDE banner" /></a><br />
+    	  	  <p class="screenshot bottom-border"><a href="${path}/${lang}/kde"><img class="spin-banner" src="${path}/static/images/kde-banner.png" alt="KDE banner" /></a><br />
     	  	  <span class="grey">${_('A complete, modern desktop built using the KDE Plasma Desktop.')}</span></p>
   	  	  </div>
   	    </div>
@@ -69,12 +69,12 @@
        <div class="high">
     	  <div class="row">
     	  	<div class="col-xs-10 col-xs-offset-1 text-center top-space">
-    	  	  <a href="/${lang}/xfce"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-xfce.jpg" alt="Xfce Screenshot" /></a>
+    	  	  <a href="${path}/${lang}/xfce"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-xfce.jpg" alt="Xfce Screenshot" /></a>
     	  	</div>
     	  </div>
     	  <div class="row">
     	  	<div class="col-xs-10 col-xs-offset-1 text-center">
-    	  	  <p class="screenshot bottom-border"><a href="/${lang}/xfce"><img class="spin-banner" src="${path}/static/images/xfce-banner.png" alt="Xfce banner" /></a><br />
+    	  	  <p class="screenshot bottom-border"><a href="${path}/${lang}/xfce"><img class="spin-banner" src="${path}/static/images/xfce-banner.png" alt="Xfce banner" /></a><br />
     	  	  <span class="grey">${_('A complete, well-integrated Xfce Desktop.')}</span></p>
   	  	  </div>
   	    </div>
@@ -83,12 +83,12 @@
        <div class="high">
         <div class="row">
           <div class="col-xs-10 col-xs-offset-1 text-center top-space">
-            <a href="/${lang}/lxqt"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-lxqt.jpg" alt="LXQt Screenshot" /></a>
+            <a href="${path}/${lang}/lxqt"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-lxqt.jpg" alt="LXQt Screenshot" /></a>
           </div>
         </div>
         <div class="row">
           <div class="col-xs-10 col-xs-offset-1 text-center">
-            <p class="screenshot bottom-border"><a href="/${lang}/lxqt"><img class="spin-banner" src="${path}/static/images/lxqt-banner.png" alt="LXQt banner" /></a><br />
+            <p class="screenshot bottom-border"><a href="${path}/${lang}/lxqt"><img class="spin-banner" src="${path}/static/images/lxqt-banner.png" alt="LXQt banner" /></a><br />
             <span class="grey">${_('A lightweight, well-integrated LXQt desktop environment.')}</span></p>
           </div>
         </div>
@@ -97,12 +97,12 @@
        <div class="high">
     	  <div class="row">
     	  	<div class="col-xs-10 col-xs-offset-1 text-center top-space">
-    	  	  <a href="/${lang}/mate-compiz"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-matecompiz.jpg" alt="MATE-Compiz Screenshot" /></a>
+    	  	  <a href="${path}/${lang}/mate-compiz"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-matecompiz.jpg" alt="MATE-Compiz Screenshot" /></a>
     	  	</div>
     	  </div>
     	  <div class="row">
     	  	<div class="col-xs-10 col-xs-offset-1 text-center">
-    	  	  <p class="screenshot bottom-border"><a href="/${lang}/mate-compiz"><img class="spin-banner" src="${path}/static/images/mate-compiz-banner.png" alt="MATE-Compiz banner" /></a><br />
+    	  	  <p class="screenshot bottom-border"><a href="${path}/${lang}/mate-compiz"><img class="spin-banner" src="${path}/static/images/mate-compiz-banner.png" alt="MATE-Compiz banner" /></a><br />
     	  	  <span class="grey">${_('A classic Fedora Desktop with an additional 3D Windows Manager.')}</span></p>
   	  	  </div>
   	    </div>
@@ -111,12 +111,12 @@
        <div class="high">
     	  <div class="row">
     	  	<div class="col-xs-10 col-xs-offset-1 text-center top-space">
-    	  	  <a href="/${lang}/cinnamon"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-cinnamon.jpg" alt="Cinnamon Screenshot" /></a>
+    	  	  <a href="${path}/${lang}/cinnamon"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-cinnamon.jpg" alt="Cinnamon Screenshot" /></a>
     	  	</div>
     	  </div>
     	  <div class="row">
     	  	<div class="col-xs-10 col-xs-offset-1 text-center">
-    	  	  <p class="screenshot bottom-border"><a href="/${lang}/cinnamon"><img class="spin-banner" src="${path}/static/images/cinnamon-banner.png" alt="Cinnamon banner" /></a><br />
+    	  	  <p class="screenshot bottom-border"><a href="${path}/${lang}/cinnamon"><img class="spin-banner" src="${path}/static/images/cinnamon-banner.png" alt="Cinnamon banner" /></a><br />
     	  	  <span class="grey">${_('A modern desktop featuring traditional Gnome user experience.')}</span></p>
   	  	  </div>
   	    </div>
@@ -125,12 +125,12 @@
        <div class="high">
         <div class="row">
           <div class="col-xs-10 col-xs-offset-1 text-center top-space">
-            <a href="/${lang}/lxde"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-lxde.jpg" alt="LXDE Screenshot" /></a>
+            <a href="${path}/${lang}/lxde"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-lxde.jpg" alt="LXDE Screenshot" /></a>
           </div>
         </div>
         <div class="row">
           <div class="col-xs-10 col-xs-offset-1 text-center">
-            <p class="screenshot bottom-border"><a href="/${lang}/lxde"><img class="spin-banner" src="${path}/static/images/lxde-banner.png" alt="LXDE banner" /></a><br />
+            <p class="screenshot bottom-border"><a href="${path}/${lang}/lxde"><img class="spin-banner" src="${path}/static/images/lxde-banner.png" alt="LXDE banner" /></a><br />
             <span class="grey">${_('A light, fast, less-resource hungry desktop environment.')}</span></p>
           </div>
         </div>
@@ -139,12 +139,12 @@
        <div class="high">
     	  <div class="row">
     	  	<div class="col-xs-10 col-xs-offset-1 text-center top-space">
-    	  	  <a href="/${lang}/soas"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-soas.jpg" alt="SoaS Screenshot" /></a>
+    	  	  <a href="${path}/${lang}/soas"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-soas.jpg" alt="SoaS Screenshot" /></a>
     	  	</div>
     	  </div>
     	  <div class="row">
     	  	<div class="col-xs-10 col-xs-offset-1 text-center bottom-space">
-    	  	  <p class="screenshot bottom-border"><a href="/${lang}/soas"><img class="spin-banner" src="${path}/static/images/soas-banner.png" alt="SoaS banner" /></a><br />
+    	  	  <p class="screenshot bottom-border"><a href="${path}/${lang}/soas"><img class="spin-banner" src="${path}/static/images/soas-banner.png" alt="SoaS banner" /></a><br />
     	  	  <span class="grey">${_('Discover. Reflect. Share. Learn.')}</span></p>
   	  	  </div>
   	    </div>
@@ -153,12 +153,12 @@
        <div class="high">
     	  <div class="row">
     	  	<div class="col-xs-10 col-xs-offset-1 text-center top-space">
-    	  	  <a href="/${lang}/i3"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-i3.jpg" alt="i3 Screenshot" /></a>
+    	  	  <a href="${path}/${lang}/i3"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-i3.jpg" alt="i3 Screenshot" /></a>
     	  	</div>
     	  </div>
     	  <div class="row">
     	  	<div class="col-xs-10 col-xs-offset-1 text-center bottom-space">
-    	  	  <p class="screenshot bottom-border"><a href="/${lang}/i3"><img class="spin-banner" src="${path}/static/images/i3-banner.png" alt="i3 banner" /></a><br />
+    	  	  <p class="screenshot bottom-border"><a href="${path}/${lang}/i3"><img class="spin-banner" src="${path}/static/images/i3-banner.png" alt="i3 banner" /></a><br />
     	  	  <span class="grey">${_('Tiling window manager.')}</span></p>
   	  	  </div>
   	    </div>
