--- a/spins.fedoraproject.org/data/content/soas/index.html
+++ b/spins.fedoraproject.org/data/content/soas/index.html
@@ -31,7 +31,7 @@
     <div class="container using">
       <div class="row">
         <div class="col-xs-12 text-center spin-download">
-        <p><a class="btn btn-lg btn-primary" href="/soas/download/index.html" role="button">${_('Download Now')}</a></p>
+        <p><a class="btn btn-lg btn-primary" href="${path}/soas/download/index.html" role="button">${_('Download Now')}</a></p>
         </div>
       </div>
     </div>
@@ -173,7 +173,7 @@
     <div class="container using">
       <div class="row">
         <div class="col-xs-12 text-center spin-download">
-        <p><a class="btn btn-lg btn-primary" href="/soas/download/index.html" role="button">${_('Download Now')}</a></p>
+        <p><a class="btn btn-lg btn-primary" href="${path}/soas/download/index.html" role="button">${_('Download Now')}</a></p>
         </div>
       </div>
     </div>
