--- a/alt.fedoraproject.org/data/content/index.html
+++ b/alt.fedoraproject.org/data/content/index.html
@@ -77,7 +77,7 @@
         <div class="col-md-9">
           <div class="white">
             <div class="col-md-1">
-            <img src="/static/images/server.png" />
+            <img src="${path}/static/images/server.png" />
             </div>
             <div class="col-md-4">
             <h3>${_('Fedora Server')}</h3>
@@ -113,7 +113,7 @@
       <div class="row">
         <div class="white">
           <div class="col-xs-3">
-          <img src="/static/images/server.png" />
+          <img src="${path}/static/images/server.png" />
           </div>
           <div class="col-xs-9">
           <h3>${_('Fedora Server')}</h3>
@@ -143,7 +143,7 @@
       <div class="row">
         <div class="white">
           <div class="col-sm-3">
-          <img src="/static/images/server.png" />
+          <img src="${path}/static/images/server.png" />
           </div>
           <div class="col-sm-5">
           <h3>${_('Fedora Server')}</h3>
@@ -234,7 +234,7 @@
         <div class="col-md-9">
           <div class="white">
             <div class="col-md-1">
-            <img src="/static/images/ev.png" />
+            <img src="${path}/static/images/ev.png" />
             </div>
             <div class="col-md-4">
             <h3>${_('Everything')}</h3>
@@ -249,7 +249,7 @@
 <!--
           <div class="white">
             <div class="col-md-1">
-            <img src="/static/images/ev.png" />
+            <img src="${path}/static/images/ev.png" />
             </div>
             <div class="col-md-4">
             <h3>${_('Everything')}</h3>
@@ -286,7 +286,7 @@
       <div class="row">
         <div class="white">
           <div class="col-xs-3">
-          <img src="/static/images/ev.png" />
+          <img src="${path}/static/images/ev.png" />
           </div>
           <div class="col-xs-9">
           <h3>${_('Everything')}</h3>
@@ -296,7 +296,7 @@
 <!--
         <div class="white">
           <div class="col-xs-3">
-          <img src="/static/images/ev.png" />
+          <img src="${path}/static/images/ev.png" />
           </div>
           <div class="col-xs-9">
           <h3>${_('Everything')}</h3>
@@ -327,7 +327,7 @@
       <div class="row">
         <div class="white">
           <div class="col-sm-3">
-          <img src="/static/images/ev.png" />
+          <img src="${path}/static/images/ev.png" />
           </div>
           <div class="col-sm-5">
           <h3>${_('Everything')}</h3>
@@ -339,7 +339,7 @@
 <!--
         <div class="white">
           <div class="col-sm-3">
-          <img src="/static/images/ev.png" />
+          <img src="${path}/static/images/ev.png" />
           </div>
           <div class="col-sm-5">
           <h3>${_('Everything')}</h3>
@@ -368,7 +368,7 @@
         <div class="col-lg-9">
           <div class="white">
             <div class="col-lg-1">
-            <img src="/static/images/night.png" />
+            <img src="${path}/static/images/night.png" />
             </div>
             <div class="col-lg-6">
             <h3>${_('Nightly builds')}</h3>
@@ -379,7 +379,7 @@
           </div>
           <div class="white">
             <div class="col-lg-1">
-            <img src="/static/images/tc.png" />
+            <img src="${path}/static/images/tc.png" />
             </div>
             <div class="col-lg-6">
             <h3>${_('Other composes (Beta / TCs / RCs)')}</h3>
@@ -409,7 +409,7 @@
       <div class="row">
         <div class="white">
           <div class="col-xs-3">
-          <img src="/static/images/night.png" />
+          <img src="${path}/static/images/night.png" />
           </div>
           <div class="col-xs-9">
           <h3>${_('Nightly builds')}</h3>
@@ -418,7 +418,7 @@
         </div>
         <div class="white">
           <div class="col-xs-3">
-          <img src="/static/images/tc.png" />
+          <img src="${path}/static/images/tc.png" />
           </div>
           <div class="col-xs-9">
           <h3>${_('Other test composes')}</h3>
@@ -445,7 +445,7 @@
       <div class="row">
         <div class="white">
           <div class="col-sm-3">
-          <img src="/static/images/night.png" />
+          <img src="${path}/static/images/night.png" />
           </div>
           <div class="col-sm-5">
           <h3>${_('Nightly builds')}</h3>
@@ -456,7 +456,7 @@
         </div>
         <div class="white">
           <div class="col-sm-3">
-          <img src="/static/images/tc.png" />
+          <img src="${path}/static/images/tc.png" />
           </div>
           <div class="col-sm-5">
           <h3>${_('Other test composes')}</h3>
@@ -484,7 +484,7 @@
         <div class="col-lg-9 col-lg-offset-3">
           <div class="white">
             <div class="col-lg-1">
-            <img src="/static/images/mb.png" />
+            <img src="${path}/static/images/mb.png" />
             </div>
             <div class="col-lg-4">
             <h3>${_('Multi-Boot DVD')}</h3>
@@ -517,7 +517,7 @@
       <div class="row">
         <div class="white">
           <div class="col-xs-3">
-          <img src="/static/images/mb.png" />
+          <img src="${path}/static/images/mb.png" />
           </div>
           <div class="col-xs-9">
           <h3>${_('Multi-Boot DVD')}</h3>
@@ -544,7 +544,7 @@
       <div class="row">
         <div class="white">
           <div class="col-sm-3">
-          <img src="/static/images/mb.png" />
+          <img src="${path}/static/images/mb.png" />
           </div>
           <div class="col-sm-5">
           <h3>${_('Multi-Boot DVD')}</h3>
