--- a/arm.fedoraproject.org/data/content/index.html
+++ b/arm.fedoraproject.org/data/content/index.html
@@ -63,7 +63,7 @@
           <div class="col-md-9">
             <div class="white">
               <div class="col-md-1">
-                <img src="/static/images/server.png" />
+                <img src="${path}/static/images/server.png" />
               </div>
               <div class="col-md-4">
                 <h3>${_('Fedora Server')}</h3>
@@ -77,7 +77,7 @@
             </div>
             <div class="white">
               <div class="col-md-1">
-                <img src="/static/images/minimal.png" />
+                <img src="${path}/static/images/minimal.png" />
               </div>
               <div class="col-md-4">
                 <h3>${_('Fedora Minimal')}</h3>
@@ -110,7 +110,7 @@
         <div class="row">
           <div class="white">
             <div class="col-xs-3">
-              <img src="/static/images/server.png" />
+              <img src="${path}/static/images/server.png" />
             </div>
             <div class="col-xs-9">
               <h3>${_('Fedora Server')}</h3>
@@ -119,7 +119,7 @@
           </div>
           <div class="white">
             <div class="col-xs-3">
-              <img src="/static/images/minimal.png" />
+              <img src="${path}/static/images/minimal.png" />
             </div>
             <div class="col-xs-9">
               <h3>${_('Fedora Minimal')}</h3>
@@ -146,7 +146,7 @@
         <div class="row">
           <div class="white">
             <div class="col-sm-3">
-              <img src="/static/images/server.png" />
+              <img src="${path}/static/images/server.png" />
             </div>
             <div class="col-sm-5">
               <h3>${_('Fedora Server')}</h3>
@@ -157,7 +157,7 @@
           </div>
           <div class="white">
             <div class="col-sm-3">
-              <img src="/static/images/minimal.png" />
+              <img src="${path}/static/images/minimal.png" />
             </div>
             <div class="col-sm-5">
               <h3>${_('Fedora Minimal')}</h3>
@@ -185,7 +185,7 @@
           <div class="col-lg-9">
             <div class="white">
               <div class="col-lg-1">
-                <img src="/static/images/workstation.png" />
+                <img src="${path}/static/images/workstation.png" />
               </div>
               <div class="col-lg-4">
                 <h3>${_('Fedora Workstation')}</h3>
@@ -199,7 +199,7 @@
 	    </div>
             <div class="white">
               <div class="col-lg-1">
-                <img src="/static/images/kde.png" />
+                <img src="${path}/static/images/kde.png" />
               </div>
               <div class="col-lg-4">
                 <h3>${_('KDE Plasma Desktop')}</h3>
@@ -213,7 +213,7 @@
             </div>
             <div class="white">
               <div class="col-lg-1">
-                <img src="/static/images/xfce.png" />
+                <img src="${path}/static/images/xfce.png" />
               </div>
               <div class="col-lg-4">
                 <h3>${_('Xfce Desktop')}</h3>
@@ -227,7 +227,7 @@
             </div>
             <!--          <div class="white">
                           <div class="col-lg-1">
-                            <img src="/static/images/lxqt.png" />
+                            <img src="${path}/static/images/lxqt.png" />
                           </div>
                           <div class="col-lg-4">
                             <h3>${_('LXQt Desktop')}</h3>
@@ -242,7 +242,7 @@
             <!--
             <div class="white">
               <div class="col-lg-1">
-                <img src="/static/images/lxde.png" />
+                <img src="${path}/static/images/lxde.png" />
               </div>
               <div class="col-lg-4">
                 <h3>${_('LXDE Desktop')}</h3>
@@ -258,7 +258,7 @@
             <!--
             <div class="white">
               <div class="col-lg-1">
-                <img src="/static/images/mate.png" />
+                <img src="${path}/static/images/mate.png" />
               </div>
               <div class="col-lg-4">
                 <h3>${_('MATE-Compiz Desktop')}</h3>
@@ -273,7 +273,7 @@
             -->
             <div class="white">
               <div class="col-lg-1">
-                <img src="/static/images/soas.png" />
+                <img src="${path}/static/images/soas.png" />
               </div>
               <div class="col-lg-4">
                 <h3>${_('Sugar on a Stick')}</h3>
@@ -306,7 +306,7 @@
         <div class="row">
           <!--<div class="white">
               <div class="col-xs-3">
-                <img src="/static/images/workstation.png" />
+                <img src="${path}/static/images/workstation.png" />
               </div>
               <div class="col-xs-9">
                 <h3>${_('Fedora Workstation')}</h3>
@@ -315,7 +315,7 @@
 	  </div>-->
           <div class="white">
             <div class="col-xs-3">
-              <img src="/static/images/kde.png" />
+              <img src="${path}/static/images/kde.png" />
             </div>
             <div class="col-xs-9">
               <h3>${_('KDE Plasma Desktop')}</h3>
@@ -324,7 +324,7 @@
           </div>
           <div class="white">
             <div class="col-xs-3">
-              <img src="/static/images/xfce.png" />
+              <img src="${path}/static/images/xfce.png" />
             </div>
             <div class="col-xs-9">
               <h3>${_('Xfce Desktop')}</h3>
@@ -333,7 +333,7 @@
           </div>
           <!--        <div class="white">
                       <div class="col-xs-3">
-                        <img src="/static/images/lxqt.png" />
+                        <img src="${path}/static/images/lxqt.png" />
                       </div>
                       <div class="col-xs-9">
                         <h3>${_('LXQt Desktop')}</h3>
@@ -343,7 +343,7 @@
           <!--
           <div class="white">
             <div class="col-xs-3">
-              <img src="/static/images/lxde.png" />
+              <img src="${path}/static/images/lxde.png" />
             </div>
             <div class="col-xs-9">
               <h3>${_('LXDE Desktop')}</h3>
@@ -354,7 +354,7 @@
           <!--
           <div class="white">
             <div class="col-xs-3">
-              <img src="/static/images/mate.png" />
+              <img src="${path}/static/images/mate.png" />
             </div>
             <div class="col-xs-9">
               <h3>${_('MATE-Compiz Desktop')}</h3>
@@ -364,7 +364,7 @@
           -->
           <div class="white">
             <div class="col-xs-3">
-              <img src="/static/images/soas.png" />
+              <img src="${path}/static/images/soas.png" />
             </div>
             <div class="col-xs-9">
               <h3>${_('Sugar on a Stick')}</h3>
@@ -391,7 +391,7 @@
         <div class="row">
           <!--<div class="white">
               <div class="col-sm-3">
-                <img src="/static/images/workstation.png" />
+                <img src="${path}/static/images/workstation.png" />
               </div>
               <div class="col-sm-5">
                 <h3>${_('Fedora Workstation')}</h3>
@@ -402,7 +402,7 @@
 	  </div>-->
           <div class="white">
             <div class="col-sm-3">
-              <img src="/static/images/kde.png" />
+              <img src="${path}/static/images/kde.png" />
             </div>
             <div class="col-sm-5">
               <h3>${_('KDE Plasma Desktop')}</h3>
@@ -413,7 +413,7 @@
           </div>
           <div class="white">
             <div class="col-sm-3">
-              <img src="/static/images/xfce.png" />
+              <img src="${path}/static/images/xfce.png" />
             </div>
             <div class="col-sm-5">
               <h3>${_('Xfce Desktop')}</h3>
@@ -424,7 +424,7 @@
           </div>
           <!--        <div class="white">
                       <div class="col-sm-3">
-                        <img src="/static/images/lxqt.png" />
+                        <img src="${path}/static/images/lxqt.png" />
                       </div>
                       <div class="col-sm-5">
                         <h3>${_('LXQt Desktop')}</h3>
@@ -436,7 +436,7 @@
           <!--
           <div class="white">
             <div class="col-sm-3">
-              <img src="/static/images/lxde.png" />
+              <img src="${path}/static/images/lxde.png" />
             </div>
             <div class="col-sm-5">
               <h3>${_('LXDE Desktop')}</h3>
@@ -449,7 +449,7 @@
           <!--
           <div class="white">
             <div class="col-sm-3">
-              <img src="/static/images/mate.png" />
+              <img src="${path}/static/images/mate.png" />
             </div>
             <div class="col-sm-5">
               <h3>${_('MATE-Compiz Desktop')}</h3>
@@ -461,7 +461,7 @@
           -->
           <div class="white">
             <div class="col-sm-3">
-              <img src="/static/images/soas.png" />
+              <img src="${path}/static/images/soas.png" />
             </div>
             <div class="col-sm-5">
               <h3>${_('Sugar on a Stick')}</h3>
@@ -489,7 +489,7 @@
           <div class="col-lg-9">
             <div class="white">
               <div class="col-lg-1">
-                <img src="/static/images/python.png" />
+                <img src="${path}/static/images/python.png" />
               </div>
               <div class="col-lg-4">
                 <h3>${_('Python-Classroom')}</h3>
@@ -522,7 +522,7 @@
         <div class="row">
           <div class="white">
             <div class="col-xs-3">
-              <img src="/static/images/python.png" />
+              <img src="${path}/static/images/python.png" />
             </div>
             <div class="col-xs-9">
               <h3>${_('Python-Classroom')}</h3>
@@ -549,7 +549,7 @@
         <div class="row">
           <div class="white">
             <div class="col-sm-3">
-              <img src="/static/images/python.png" />
+              <img src="${path}/static/images/python.png" />
             </div>
             <div class="col-sm-5">
               <h3>${_('Python-Classroom')}</h3>
