--- a/arm.fedoraproject.org/data/content/prerelease.html
+++ b/arm.fedoraproject.org/data/content/prerelease.html
@@ -40,7 +40,7 @@
         <div class="row top-margin">
          <div class="col-xs-12 white">
             <div class="col-xs-3 col-sm-1 text-center">
-              <img class="img-responsive" src="/static/images/server.png" alt="Server" />
+              <img class="img-responsive" src="${path}/static/images/server.png" alt="Server" />
             </div>
             <div class="col-sm-3 hidden-xs">
             <h3>${_('Fedora Server')}</h3>
@@ -58,7 +58,7 @@
          </div>
          <div class="col-xs-12 white bottom-margin">
             <div class="col-xs-3 col-sm-1 text-center">
-              <img class="img-responsive" src="/static/images/minimal.png" alt="Minimal" />
+              <img class="img-responsive" src="${path}/static/images/minimal.png" alt="Minimal" />
             </div>
             <div class="col-sm-3 hidden-xs">
             <h3>${_('Fedora Minimal')}</h3>
@@ -76,7 +76,7 @@
          </div>
          <div class="col-xs-12 white top-margin">
             <div class="col-xs-3 col-sm-1 text-center">
-              <img class="img-responsive" src="/static/images/workstation.png" alt="Workstation" />
+              <img class="img-responsive" src="${path}/static/images/workstation.png" alt="Workstation" />
             </div>
             <div class="col-sm-3 hidden-xs">
             <h3>${_('Fedora Workstation')}</h3>
@@ -94,7 +94,7 @@
          </div>
          <div class="col-xs-12 white">
             <div class="col-xs-3 col-sm-1 text-center">
-              <img class="img-responsive" src="/static/images/kde.png" alt="KDE Plasma" />
+              <img class="img-responsive" src="${path}/static/images/kde.png" alt="KDE Plasma" />
             </div>
             <div class="col-sm-3 hidden-xs">
             <h3>${_('KDE Plasma Desktop')}</h3>
@@ -112,7 +112,7 @@
          </div>
          <div class="col-xs-12 white">
             <div class="col-xs-3 col-sm-1 text-center">
-              <img class="img-responsive" src="/static/images/xfce.png" alt="Xfce" />
+              <img class="img-responsive" src="${path}/static/images/xfce.png" alt="Xfce" />
             </div>
             <div class="col-sm-3 hidden-xs">
             <h3>${_('Xfce Desktop')}</h3>
@@ -131,7 +131,7 @@
          <!-- f34beta, nope
          <div class="col-xs-12 white">
             <div class="col-xs-3 col-sm-1 text-center">
-              <img class="img-responsive" src="/static/images/lxde.png" alt="LXDE" />
+              <img class="img-responsive" src="${path}/static/images/lxde.png" alt="LXDE" />
             </div>
             <div class="col-sm-3 hidden-xs">
             <h3>${_('LXDE Desktop')}</h3>
@@ -149,7 +149,7 @@
          </div>
          <div class="col-xs-12 white">
             <div class="col-xs-3 col-sm-1 text-center">
-              <img class="img-responsive" src="/static/images/lxqt.png" alt="LXQt" />
+              <img class="img-responsive" src="${path}/static/images/lxqt.png" alt="LXQt" />
             </div>
             <div class="col-sm-3 hidden-xs">
             <h3>${_('LXQt Desktop')}</h3>
@@ -167,7 +167,7 @@
          </div>
          <div class="col-xs-12 white">
             <div class="col-xs-3 col-sm-1 text-center">
-              <img class="img-responsive" src="/static/images/mate.png" alt="MATE-Compiz" />
+              <img class="img-responsive" src="${path}/static/images/mate.png" alt="MATE-Compiz" />
             </div>
             <div class="col-sm-3 hidden-xs">
             <h3>${_('MATE-Compiz Desktop')}</h3>
@@ -186,7 +186,7 @@
 
          <div class="col-xs-12 white">
             <div class="col-xs-3 col-sm-1 text-center">
-              <img class="img-responsive" src="/static/images/cinnamon.png" alt="Cinnamon" />
+              <img class="img-responsive" src="${path}/static/images/cinnamon.png" alt="Cinnamon" />
             </div>
             <div class="col-sm-3 hidden-xs">
             <h3>${_('Cinnamon Desktop')}</h3>
@@ -205,7 +205,7 @@
 -->
          <div class="col-xs-12 white bottom-space">
             <div class="col-xs-3 col-sm-1 text-center">
-              <img class="img-responsive" src="/static/images/soas.png" alt="SoaS" />
+              <img class="img-responsive" src="${path}/static/images/soas.png" alt="SoaS" />
             </div>
             <div class="col-sm-3 hidden-xs">
             <h3>${_('Sugar on a Stick')}</h3>
