--- a/labs.fedoraproject.org/data/content/robotics/download/index.html
+++ b/labs.fedoraproject.org/data/content/robotics/download/index.html
@@ -67,7 +67,7 @@
             <h3>${_('Verify')}</h3>
               <ul>
               <li>
-                  <p><a href="/verify">${_('Verify your Image')}</a></p>
+                  <p><a href="${path}/verify">${_('Verify your Image')}</a></p>
               </li>
               </ul>
           </div>
