--- a/spins.fedoraproject.org/data/content/i3/index.html
+++ b/spins.fedoraproject.org/data/content/i3/index.html
@@ -29,7 +29,7 @@
     <div class="container using">
       <div class="row">
         <div class="col-xs-12 text-center spin-download">
-        <p><a class="btn btn-lg btn-primary" href="/i3/download/index.html" role="button">${_('Download Now')}</a></p>
+        <p><a class="btn btn-lg btn-primary" href="${path}/i3/download/index.html" role="button">${_('Download Now')}</a></p>
         </div>
       </div>
     </div>
@@ -174,7 +174,7 @@
     <div class="container using">
       <div class="row">
         <div class="col-xs-12 text-center spin-download">
-        <p><a class="btn btn-lg btn-primary" href="/i3/download/index.html" role="button">${_('Download Now')}</a></p>
+        <p><a class="btn btn-lg btn-primary" href="${path}/i3/download/index.html" role="button">${_('Download Now')}</a></p>
         </div>
       </div>
     </div>
