--- a/spins.fedoraproject.org/data/content/lxde/index.html
+++ b/spins.fedoraproject.org/data/content/lxde/index.html
@@ -30,7 +30,7 @@
     <div class="container using">
       <div class="row">
         <div class="col-xs-12 text-center spin-download">
-        <p><a class="btn btn-lg btn-primary" href="/lxde/download/index.html" role="button">${_('Download Now')}</a></p>
+        <p><a class="btn btn-lg btn-primary" href="${path}/lxde/download/index.html" role="button">${_('Download Now')}</a></p>
         </div>
       </div>
     </div>
@@ -134,7 +134,7 @@
     <div class="container using">
       <div class="row">
         <div class="col-xs-12 text-center spin-download">
-        <p><a class="btn btn-lg btn-primary" href="/lxde/download/index.html" role="button">${_('Download Now')}</a></p>
+        <p><a class="btn btn-lg btn-primary" href="${path}/lxde/download/index.html" role="button">${_('Download Now')}</a></p>
         </div>
       </div>
     </div>
