--- a/spins.fedoraproject.org/data/content/xfce/index.html
+++ b/spins.fedoraproject.org/data/content/xfce/index.html
@@ -30,7 +30,7 @@
     <div class="container using">
       <div class="row">
         <div class="col-xs-12 text-center spin-download">
-        <p><a class="btn btn-lg btn-primary" href="/xfce/download/index.html" role="button">${_('Download Now')}</a></p>
+        <p><a class="btn btn-lg btn-primary" href="${path}/xfce/download/index.html" role="button">${_('Download Now')}</a></p>
         </div>
       </div>
     </div>
@@ -129,7 +129,7 @@
     <div class="container using">
       <div class="row">
         <div class="col-xs-12 text-center spin-download">
-        <p><a class="btn btn-lg btn-primary" href="/xfce/download/index.html" role="button">${_('Download Now')}</a></p>
+        <p><a class="btn btn-lg btn-primary" href="${path}/xfce/download/index.html" role="button">${_('Download Now')}</a></p>
         </div>
       </div>
     </div>
